--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IGUMO｜粋雲</title>
-<link rel="icon" href="images/favicon.png">
+<link rel="icon" type="image/png" href="favicon.png">
 <link rel="icon" href="images/favicon.png" sizes="any">
 <link rel="apple-touch-icon" href="images/favicon.png">
 
@@ -284,3 +284,4 @@
 
 </body>
 </html>
+
