--- a/tommission2.html
+++ b/tommission2.html
@@ -132,7 +132,7 @@ h1, h2 {
 
     <h2>《連絡先》</h2>
     <p>
-      X(DM)：<a href="https://twitter.com/igmoguiku" target="_blank">@nlmlt3015</a>
+      X(DM)：<a href="https://twitter.com/igmoguiku" target="_blank">@igmoguiku</a>
     <br>
       メール：igmoguiku@gmail.com
     </p>
@@ -153,3 +153,4 @@ h1, h2 {
 
 </body>
 </html>
+
