--- a/tommission2.html
+++ b/tommission2.html
@@ -4,9 +4,7 @@
 <meta charset="UTF-8">
 <title>ご依頼について</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="images/favicon.png">
-<link rel="icon" href="images/favicon.png" sizes="any">
-<link rel="apple-touch-icon" href="images/favicon.png">
+<link rel="icon" href="./favicon.png">
 
 
 <style>
@@ -153,4 +151,5 @@ h1, h2 {
 
 </body>
 </html>
+
 
