--- a/terms.html
+++ b/terms.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>利用規約</title>
-<link rel="icon" href="images/favicon.png">
-<link rel="icon" href="images/favicon.png" sizes="any">
-<link rel="apple-touch-icon" href="images/favicon.png">
+<link rel="icon" href="./favicon.png">
 
 
   <style>
@@ -94,3 +92,4 @@ a {
 
 </body>
 </html>
+
