--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IGUMO｜粋雲</title>
-<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" href="./favicon.png">
 
 
   <style>
@@ -282,5 +282,6 @@
 
 </body>
 </html>
+
 
 
