--- a/tommission2.html
+++ b/tommission2.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>ご依頼について</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="./favicon.png">
+<link rel="icon" type="image/png" href="./favicon.png">
 
 
 <style>
@@ -151,5 +151,6 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
