--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IGUMO｜粋雲</title>
-<link rel="icon" type="image/png" href="./favicon.png">
 
+<link rel="icon" type="image/png" href="./icon.png">
 
 
   <style>
@@ -283,6 +283,7 @@
 
 </body>
 </html>
+
 
 
 
