--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>利用規約</title>
-<link rel="icon" type="image/png" href="./favicon.png">
+  
+<link rel="icon" type="image/png" href="./icon.png">
 
 
   <style>
@@ -92,5 +93,6 @@ a {
 
 </body>
 </html>
+
 
 
