--- a/tommission2.html
+++ b/tommission2.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>ご依頼について</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="./favicon.png">
 
+<link rel="icon" type="image/png" href="./icon.png">
 
 <style>
 /* ===== 全体 ===== */
@@ -151,6 +151,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
