--- a/tommission2.html
+++ b/tommission2.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3LCZJCKYY0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-3LCZJCKYY0');
+</script>
 <meta charset="UTF-8">
 <title>ご依頼について</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -151,6 +159,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
