--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3LCZJCKYY0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -101,6 +101,7 @@ a {
 
 </body>
 </html>
+
 
 
 
