--- a/terms.html
+++ b/terms.html
@@ -90,6 +90,9 @@ a {
     <p>
       最終更新日：2025/12/22
     </p>
+<p>
+当サイトではアクセス解析のため Google Analytics を使用しています。
+</p>
 
     <p>
       <a href="index.html">← トップページに戻る</a>
@@ -101,6 +104,7 @@ a {
 
 </body>
 </html>
+
 
 
 
