--- a/terms.html
+++ b/terms.html
@@ -52,7 +52,7 @@ a {
     <p>
       当サイトに掲載されているイラスト等の著作物は、<br>
       すべて制作者に帰属します。<br>
-      また、違反行為を見つけた方はご連絡ください。
+      また、違反行為を見つけた方は粋雲までご連絡ください。
     </p>
 
     <h2>《禁止事項》</h2>
@@ -70,16 +70,13 @@ a {
       保存は一言くれると嬉しいです。
     </p>
 
-    <h2>《リンクについて》</h2>
+    <h2>《FA･リクエスト･依頼》</h2>
     <p>
-      当サイトへのリンクは原則自由ですが、<br>
-      公序良俗に反するサイトからのリンクはお断りします。
-    </p>
-
-    <h2>《免責事項》</h2>
-    <p>
-      当サイトの利用によって生じたトラブルについて、<br>
-      制作者は一切の責任を負いません。
+      いずれもイラストの権利は全て制作者に帰属します。<br>
+      無断でのネットプリントでの使用や、<br>
+    　依頼内容に沿わない用途での使用(他用･多用)はおやめください。
+    　別名義で使用する場合も、混乱を招かないために報告をお願い致します。
+    　ご本人様であれば快く承諾するので気軽に相談してください。
     </p>
 
     <h2>《規約の変更》</h2>
@@ -104,6 +101,7 @@ a {
 
 </body>
 </html>
+
 
 
 
