--- a/terms.html
+++ b/terms.html
@@ -70,7 +70,7 @@ a {
       保存は一言くれると嬉しいです。
     </p>
 
-    <h2>《FA･リクエスト･依頼》</h2>
+    <h2>《FA･リクエスト･依頼絵について》</h2>
     <p>
     いずれもイラストの権利は全て制作者に帰属します。<br>
     無断でのネットプリントでの使用や、<br>
@@ -101,6 +101,7 @@ a {
 
 </body>
 </html>
+
 
 
 
