--- a/terms.html
+++ b/terms.html
@@ -76,7 +76,7 @@ a {
     無断でのネットプリントでの使用や、<br>
     依頼内容に沿わない用途での使用(他用･多用)はおやめください。<br>
     別名義で使用する場合も、混乱を招かないために報告をお願い致します。<br>
-    ご本人様であれば快く承諾するので気軽に相談してください。
+    ご本人様であれば快く承諾するので気軽にご相談ください。
     </p>
 
     <h2>《規約の変更》</h2>
@@ -101,6 +101,7 @@ a {
 
 </body>
 </html>
+
 
 
 
