--- a/tommission2.html
+++ b/tommission2.html
@@ -128,12 +128,19 @@ h1, h2 {
       <li>制作開始</li>
       <li>完成・納品</li>
     </ol>
+  <br>
+    <h2>《メッセージ形式》</h2>
+    <ul>
+      <li>自己紹介</li>
+      <li>依頼内容、絵柄･構図･納期指定あれば(絵柄は過去の絵を指し示すこと可)</li>
+    </ul>
 <br>
     <h2>《注意事項》</h2>
     <ul>
       <li>自作発言・二次配布は禁止</li>
       <li>商用利用は事前にご相談ください</li>
       <li>修正回数には制限があります</li>
+      <li>お金に余裕のある方のみご依頼ください</li>
     </ul>
 <br>
     <h2>《連絡先》</h2>
@@ -159,6 +166,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
