--- a/tommission2.html
+++ b/tommission2.html
@@ -131,6 +131,7 @@ h1, h2 {
   <br>
     <h2>《メッセージ形式》</h2>
     <ul>
+      <li>必要最低限の内容だけあれば基本自由</li>
       <li>自己紹介</li>
       <li>依頼内容、絵柄･構図･納期指定あれば(絵柄は過去の絵を指し示すこと可)</li>
     </ul>
@@ -166,6 +167,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
