--- a/tommission2.html
+++ b/tommission2.html
@@ -134,6 +134,7 @@ h1, h2 {
       <li>必要最低限の内容だけあれば基本自由</li>
       <li>自己紹介</li>
       <li>依頼内容、絵柄･構図･納期指定あれば(絵柄は過去の絵を指し示すこと可)</li>
+      <li>資料の画像又はURL</li>
     </ul>
 <br>
     <h2>《注意事項》</h2>
@@ -167,6 +168,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
