--- a/tommission2.html
+++ b/tommission2.html
@@ -97,7 +97,9 @@ h1, h2 {
 <ul>
   <li>アイコン</li>
   <li>一枚絵</li>
+  <li>立ち絵</li>
   <li>歌ってみたや企画等のサムネイル</li>
+  <li>その他イラスト</li>
 </ul>
 <br>
 <h2>《サンプルイラスト》</h2>
@@ -112,19 +114,16 @@ h1, h2 {
 ※ サンプル画像の無断使用・保存・転載は禁止しています
 </p>
 <br>
-    <h2>《料金目安》</h2>
+    <h2>《料金について》</h2>
     <ul>
-      <li>アイコン：¥500〜</li>
-      <li>一枚絵：¥1000〜</li>
-      <li>立ち絵：¥1500〜</li>
-      <li>サムネイル：¥1500〜</li>
-    </ul>
-    <p>※内容・描写量によって変動します。</p>
+      <li>皆様の活動を少しでもお手伝いできたらいいなと思っているので、<br>
+        依頼者様のご予算を考え、「イラストに似合った価値」として自由にお決めください。</li>
+    </ul> 
 <br>
     <h2>《ご依頼の流れ》</h2>
     <ol>
       <li>SNSまたはメールでご連絡ください</li>
-      <li>内容確認・お見積り</li>
+      <li>内容確認</li>
       <li>制作開始</li>
       <li>完成・納品</li>
     </ol>
@@ -135,6 +134,7 @@ h1, h2 {
       <li>自己紹介</li>
       <li>依頼内容、絵柄･構図･納期指定あれば(絵柄は過去の絵を指し示すこと可)</li>
       <li>資料の画像又はURL</li>
+      <li>ご予算</li>
     </ul>
 <br>
     <h2>《注意事項》</h2>
@@ -168,6 +168,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
