--- a/tommission2.html
+++ b/tommission2.html
@@ -130,7 +130,7 @@ h1, h2 {
   <br>
     <h2>《メッセージ形式》</h2>
     <ul>
-      <li>必要最低限の内容だけあれば基本自由</li>
+      <li>必要最低限の内容さえあれば基本自由</li>
       <li>自己紹介</li>
       <li>依頼内容、絵柄･構図･納期指定あれば(絵柄は過去の絵を指し示すこと可)</li>
       <li>資料の画像又はURL</li>
@@ -168,6 +168,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
