--- a/tommission2.html
+++ b/tommission2.html
@@ -139,6 +139,7 @@ h1, h2 {
 <br>
     <h2>《注意事項》</h2>
     <ul>
+      <br>@iggmgg表記、Scratchと無関係の場所で使用する場合のXのユーザー名@igmoguikuの表記をお願いします。
       <li>自作発言・二次配布は禁止</li>
       <li>商用利用は事前にご相談ください</li>
       <li>修正回数には制限があります</li>
@@ -168,6 +169,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
