--- a/tommission2.html
+++ b/tommission2.html
@@ -138,8 +138,8 @@ h1, h2 {
     </ul>
 <br>
     <h2>《注意事項》</h2>
+<p>@iggmgg表記、Scratchと無関係の場所で使用する場合のXのユーザー名@igmoguikuの表記をお願いします。</p>
     <ul>
-@iggmgg表記、Scratchと無関係の場所で使用する場合のXのユーザー名@igmoguikuの表記をお願いします。
       <li>自作発言・二次配布は禁止</li>
       <li>商用利用は事前にご相談ください</li>
       <li>修正回数には制限があります</li>
@@ -169,6 +169,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
