--- a/tommission2.html
+++ b/tommission2.html
@@ -141,9 +141,9 @@ h1, h2 {
 <p>@iggmgg表記、Scratchと無関係の場所で使用する場合のXのユーザー名@igmoguikuの表記をお願いします。</p>
     <ul>
       <li>自作発言・二次配布は禁止</li>
-      <li>商用利用は事前にご相談ください</li>
-      <li>修正回数には制限があります</li>
-      <li>お金に余裕のある方のみご依頼ください</li>
+      <li>商用利用は事前にご相談ください。</li>
+      <li>修正回数には制限があります。</li>
+      <li>払い戻しは不可です。金銭的に余裕のある方だけご依頼ください。</li>
     </ul>
 <br>
     <h2>《連絡先》</h2>
@@ -169,6 +169,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
