--- a/tommission2.html
+++ b/tommission2.html
@@ -118,6 +118,7 @@ h1, h2 {
     <ul>
       <li>皆様の活動を少しでもお手伝いできたらいいなと思っているので、<br>
         依頼者様のご予算を考え、「イラストに似合った価値」として自由にお決めください。</li>
+      <li>支払い方法はPayPay or Amazonの欲しいものリストのいずれか</li>
     </ul> 
 <br>
     <h2>《ご依頼の流れ》</h2>
@@ -169,6 +170,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
