--- a/tommission2.html
+++ b/tommission2.html
@@ -120,6 +120,9 @@ h1, h2 {
         依頼者様のご予算を考え、「イラストに似合った価値」として自由にお決めください。</li>
       <li>支払い方法はPayPay or Amazonの欲しいものリストのいずれか</li>
     </ul> 
+  <p>
+      <a href="https://twitter.com/igmoguiku" target="_blank">@igmoguiku</a>
+  </p>
 <br>
     <h2>《ご依頼の流れ》</h2>
     <ol>
@@ -170,6 +173,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
