--- a/tommission2.html
+++ b/tommission2.html
@@ -121,7 +121,7 @@ h1, h2 {
       <li>支払い方法はPayPay or Amazonの欲しいものリストのいずれか</li>
     </ul> 
   <p>
-      <a href="https://twitter.com/igmoguiku" target="_blank">@igmoguiku</a>
+      <a href="https://twitter.com/igmoguiku" target="_blank">欲しいものリスト</a>
   </p>
 <br>
     <h2>《ご依頼の流れ》</h2>
@@ -173,6 +173,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
