--- a/terms.html
+++ b/terms.html
@@ -73,7 +73,7 @@ a {
     <h2>《FA･リクエスト･依頼絵について》</h2>
     <p>
     いずれもイラストの権利は全て制作者に帰属します。<br>
-    無断でのネットプリントでの使用や、<br>
+    無断でのネットプリント等での使用や、<br>
     依頼内容に沿わない用途での使用(他用･多用)はおやめください。<br>
     別名義で使用する場合も、混乱を招かないために報告をお願い致します。<br>
     ご本人様であれば快く承諾するので気軽にご相談ください。
@@ -101,6 +101,7 @@ a {
 
 </body>
 </html>
+
 
 
 
