--- a/terms.html
+++ b/terms.html
@@ -75,6 +75,7 @@ a {
     いずれもイラストの権利は全て制作者に帰属します。<br>
     無断でのネットプリント等での使用や、<br>
     無表記での使用はおやめください。<br>
+        Scratchでは@iggmgg表記、Scratchと無関係の場所で使用する場合のXのユーザー名@igmoguikuの表記をお願いします。<br>
     別名義で使用する場合も、混乱を招かないために報告をお願いします。<br>
     ご本人様であれば快く承諾するので気軽にご相談ください。
     </p>
@@ -101,6 +102,7 @@ a {
 
 </body>
 </html>
+
 
 
 
