--- a/tommission2.html
+++ b/tommission2.html
@@ -142,7 +142,7 @@ h1, h2 {
     </ul>
 <br>
     <h2>《注意事項》</h2>
-<p>Scratchでは@iggmgg表記、Scratchと無関係の場所で使用する場合のXのユーザー名@igmoguikuの表記をお願いします。</p>
+<p>Scratchでは@iggmgg表記、Scratchと無関係の場所で使用する場合はXのユーザー名@igmoguikuの表記をお願いします。</p>
     <ul>
       <li>自作発言・二次配布は禁止</li>
       <li>商用利用は事前にご相談ください。</li>
@@ -173,6 +173,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
