--- a/tommission2.html
+++ b/tommission2.html
@@ -144,7 +144,7 @@ h1, h2 {
     <h2>《注意事項》</h2>
 <p>Scratchでは@iggmgg表記、Scratchと無関係の場所で使用する場合はXのユーザー名@igmoguikuの表記をお願いします。</p>
     <ul>
-      <li>自作発言・二次配布は禁止</li>
+      <li>依頼者様以外の使用や譲渡・自作発言・二次配布は禁止</li>
       <li>商用利用は事前にご相談ください。</li>
       <li>修正回数には制限があります。</li>
       <li>払い戻しは不可です。金銭的に余裕のある方だけご依頼ください。</li>
@@ -173,6 +173,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
