--- a/tommission2.html
+++ b/tommission2.html
@@ -147,6 +147,7 @@ h1, h2 {
       <li>依頼者様以外の使用や譲渡・自作発言・二次配布は禁止</li>
       <li>商用利用は事前にご相談ください。</li>
       <li>修正回数には制限があります。</li>
+      <li>期限を指定しない場合は最大3ヶ月程かかります。</li>
       <li>払い戻しは不可です。金銭的に余裕のある方だけご依頼ください。</li>
     </ul>
 <br>
@@ -173,6 +174,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
