--- a/tommission2.html
+++ b/tommission2.html
@@ -129,6 +129,7 @@ h1, h2 {
       <li>SNSまたはメールでご連絡ください</li>
       <li>内容確認</li>
       <li>制作開始</li>
+      <li>ラフ提出・修正</li>
       <li>完成・納品</li>
     </ol>
   <br>
@@ -174,6 +175,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
