--- a/tommission2.html
+++ b/tommission2.html
@@ -126,7 +126,7 @@ h1, h2 {
 <br>
     <h2>《ご依頼の流れ》</h2>
     <ol>
-      <li>SNSまたはメールでご連絡ください</li>
+      <li>SNSまたはメールでご連絡ください(その他要相談)</li>
       <li>内容確認</li>
       <li>制作開始</li>
       <li>ラフ提出・修正</li>
@@ -175,6 +175,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
