--- a/tommission2.html
+++ b/tommission2.html
@@ -117,7 +117,7 @@ h1, h2 {
     <h2>《料金について》</h2>
     <ul>
       <li>皆様の活動を少しでもお手伝いできたらいいなと思っているので、<br>
-        依頼者様のご予算を考え、「イラストに似合った価値」として自由にお決めください。</li>
+        依頼者様のご予算を考え、「イラストに似合った価値」としてご自由にお決めください。</li>
       <li>支払い方法はPayPay or Amazonの欲しいものリストのいずれか</li>
     </ul> 
   <p>
@@ -175,6 +175,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
