--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 
     <div class="gallery">
       <img src="images/dairi.png" class="art" onclick="openModal(this)">
+      <img src="images/20251231.png" class="art" onclick="openModal(this)">
       <img src="images/20251229.png" class="art" onclick="openModal(this)">
       <img src="images/20251228.png" class="art" onclick="openModal(this)">
       <img src="images/20251220.png" class="art" onclick="openModal(this)">
@@ -294,6 +295,7 @@
 
 </body>
 </html>
+
 
 
 
