--- a/terms.html
+++ b/terms.html
@@ -70,7 +70,7 @@ a {
       保存は一言くれると嬉しいです。
     </p>
 <br>
-    <h2>《FA･リクエストについて》</h2>
+    <h2>《FA･リクエスト絵について》</h2>
     <p>
     いずれもイラストの権利は全て制作者に帰属します。<br>
     無断でのネットプリント等での使用や、<br>
@@ -102,6 +102,7 @@ a {
 
 </body>
 </html>
+
 
 
 
