--- a/terms.html
+++ b/terms.html
@@ -73,7 +73,7 @@ a {
     <h2>《FA･リクエスト絵について》</h2>
     <p>
     いずれもイラストの権利は全て制作者に帰属します。<br>
-    無断でのネットプリント等での使用や、<br>
+    無断でのアイコン、ネットプリント等での使用や、<br>
     無表記での使用はおやめください。<br>
     　(Scratchでは@iggmgg表記、Scratchと無関係の場所で使用する場合はXのユーザー名@igmoguikuの表記をお願いします。)<br>
     別名義で使用する場合も、混乱を招かないために報告をお願いします。<br>
@@ -86,7 +86,7 @@ a {
     </p>
 <br><br>
     <p>
-      最終更新日：2026/1/1
+      最終更新日：2026/1/18
     </p>
 <p>
 当サイトではアクセス解析のため Google Analytics を使用しています。
@@ -102,6 +102,7 @@ a {
 
 </body>
 </html>
+
 
 
 
