--- a/tommission2.html
+++ b/tommission2.html
@@ -130,7 +130,7 @@ h1, h2 {
       <li>内容確認</li>
       <li>制作開始</li>
       <li>ラフ提出・修正</li>
-      <li>完成・納品</li>
+      <li>納品・ご送金</li>
     </ol>
   <br>
     <h2>《メッセージ形式》</h2>
@@ -175,6 +175,7 @@ h1, h2 {
 
 </body>
 </html>
+
 
 
 
